[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/background.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Hexagon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/A.Casual.Handwritten.Pen.Noncommercial.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/GameButtons.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/HowManyCoins.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/SettingsMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/ModeMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/bensoundinspire.ogg" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 160
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 180
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 140
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 0.431373, 0.431373, 1 )
margin_right = 750.0
margin_bottom = 1550.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="Hexagon" parent="." instance=ExtResource( 3 )]
position = Vector2( 375, 765 )

[node name="HighScoreText" type="Label" parent="."]
margin_left = 147.0
margin_top = 1038.0
margin_right = 603.0
margin_bottom = 1165.0
custom_fonts/font = SubResource( 1 )
text = "HighScore:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="."]
margin_left = 308.0
margin_top = 1168.0
margin_right = 442.0
margin_bottom = 1295.0
custom_fonts/font = SubResource( 1 )
text = "45"
align = 1

[node name="Title" type="Label" parent="."]
margin_left = 67.0
margin_top = 301.0
margin_right = 683.0
margin_bottom = 428.0
custom_fonts/font = SubResource( 2 )
text = "HEXA-ROLL"

[node name="PlayButtonLabel" type="Label" parent="."]
margin_left = 290.0
margin_top = 708.0
margin_right = 458.0
margin_bottom = 808.0
custom_fonts/font = SubResource( 3 )
text = "Play"

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 230.0
margin_top = 668.0
margin_right = 510.0
margin_bottom = 848.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameButtons" parent="." instance=ExtResource( 5 )]

[node name="HowManyCoins" parent="." instance=ExtResource( 6 )]

[node name="InfoSettingsMenu" parent="." instance=ExtResource( 7 )]

[node name="ModeMenu" parent="." instance=ExtResource( 8 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="menu" from="GameButtons" to="Hexagon" method="_on_GameButtons_pause"]
[connection signal="menu" from="GameButtons" to="ModeMenu" method="_on_GameButtons_menu"]
[connection signal="menu" from="GameButtons" to="." method="_on_GameButtons_menu"]
[connection signal="settings" from="GameButtons" to="Hexagon" method="_on_GameButtons_pause"]
[connection signal="settings" from="GameButtons" to="." method="_on_GameButtons_settings"]
[connection signal="SoundOff" from="InfoSettingsMenu" to="." method="_on_InfoSettingsMenu_SoundOff"]
[connection signal="SoundOn" from="InfoSettingsMenu" to="." method="_on_InfoSettingsMenu_SoundOn"]
[connection signal="backk" from="InfoSettingsMenu" to="Hexagon" method="_on_lilmenu2_continuee"]
[connection signal="backk" from="ModeMenu" to="Hexagon" method="_on_ModeMenu_backk"]
[connection signal="challenges" from="ModeMenu" to="." method="_on_ModeMenu_challenges"]
[connection signal="hard" from="ModeMenu" to="." method="_on_ModeMenu_hard"]
[connection signal="store" from="ModeMenu" to="." method="_on_ModeMenu_store"]
